# yans-2024-hackathon-baseline

./: README.md  create_dummy_dataset.py  evaluate_submission.py  make_submission.py  notebook_ogiri.ipynb  notebook_senryu.ipynb  pyproject.toml  requirements.txt
haiku/: item_to_api_input.py  scorer.py
ogiri/: item_to_api_input.py  scorer.py
utils/: chatgpt.py  data_util.py
